--- a/Client Web/webMshipper/pages/index.html
+++ b/Client Web/webMshipper/pages/index.html
@@ -67,7 +67,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Mshipper v0.1</a>
+            <a class="navbar-brand" href="#dashboard">Mshipper v0.1</a>
         </div>
         <!-- /.navbar-header -->
 
