Modify and Create something

--- a/Client Web/webMshipper/pages/index.html
+++ b/Client Web/webMshipper/pages/index.html
@@ -303,16 +303,13 @@
                         <a href="#dashboard"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#flot">Flot Charts</a>
-                            </li>
-                            <li>
-                                <a href="#morris">Morris.js Charts</a>
-                            </li>
-                        </ul>
-                        <!-- /.nav-second-level -->
+                        <a href="#tabledsdonhang"><i class="fa fa-dashboard fa-fw"></i> Danh sách đơn hàng</a>
+                    </li>
+                    <li>
+                        <a href="#flot"><i class="fa fa-bar-chart-o fa-fw"></i> Flot Charts</a>
+                    </li>
+                    <li>
+                        <a href="#morris"><i class="fa fa-bar-chart-o fa-fw"></i> Morris.js Charts</a>
                     </li>
                     <li>
                         <a href="#table"><i class="fa fa-table fa-fw"></i> Tables</a>
@@ -345,47 +342,7 @@
                         <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span
-                                class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#">Second Level Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Second Level Item</a>
-                            </li>
-                            <li>
-                                <a href="#">Third Level <span class="fa arrow"></span></a>
-                                <ul class="nav nav-third-level">
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Third Level Item</a>
-                                    </li>
-                                </ul>
-                                <!-- /.nav-third-level -->
-                            </li>
-                        </ul>
-                        <!-- /.nav-second-level -->
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li>
-                                <a href="#blank">Blank Page</a>
-                            </li>
-                            <li>
-                                <a href="#login">Login Page</a>
-                            </li>
-                        </ul>
-                        <!-- /.nav-second-level -->
+                        <a href="#login"><i class="fa fa-files-o fa-fw"></i>Login Page</a>
                     </li>
                 </ul>
             </div>
