--- a/Client Web/webMshipper/pages/tableDsDonHang_add.html
+++ b/Client Web/webMshipper/pages/tableDsDonHang_add.html
@@ -13,6 +13,33 @@
                     <div class="panel-heading">
                         Bảng dữ liệu
                     </div>
+
+                    <div class="row">
+
+                        <div class="col-sm-6">
+                            <div class="block row">
+                                <div class="block right">
+                                    <ng-csv-import
+                                            class="import"
+                                            content="csv.content"
+                                            header="csv.header"
+                                            header-visible="csv.headerVisible"
+                                            separator="csv.separator"
+                                            separator-visible="csv.separatorVisible"
+                                            result="csv.result"
+                                            encoding="csv.encoding"
+                                            encoding-visible="csv.encodingVisible"
+                                            upload-button-label="csv.uploadButtonLabel"></ng-csv-import>
+                                </div>
+                            </div>
+
+                            <div  ng-if="csv.result" ng-init="GetImport()">
+                            </div>
+                        </div>
+                    </div>
+
+                    <br>
+
                     <div class="row">
                         <div class="col-sm-2">
                             <div>
@@ -46,13 +73,12 @@
                                  ng-model="selectArea">
                             </div>
                         </div>
-
                     </div>
+
                     <br>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <table width="100%" class="table table-striped table-bordered table-hover"
-                               id="dataTables-example">
+                        <table  width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                             <thead>
                             <tr>
                                 <th>Id</th>
@@ -68,17 +94,17 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr class="pointer" ng-repeat="x in orders">
-                                <td>x._id</td>
-                                <td>x._created_date</td>
-                                <td>x._expected_date</td>
-                                <td>x._address</td>
-                                <td>x._area_id</td>
-                                <td>10.9999</td>
-                                <td>x._order_status</td>
-                                <td>x._payment_status</td>
-                                <td>x._note</td>
-                                <td>detail</td>
+                            <tr data-ng-repeat="x in DonHangs " ng-click="clickRow(x)">
+                                <td>{{x.Id}}</td>
+                                <td>{{x.CreatedDay}}</td>
+                                <td>{{x.ExpectedDay}}</td>
+                                <td>{{x.Adress}}</td>
+                                <td>{{x.AreaId}}</td>
+                                <td>{{x.LocaionMaps}}</td>
+                                <td>{{x.OrderStatus}}</td>
+                                <td>{{x.PaymentStatus}}</td>
+                                <td>{{x.Note}}</td>
+                                <td>{{x.Detail}}</td>
                             </tr>
                             </tbody>
                         </table>
