--- a/Client Web/webMshipper/pages/tableThongBao.html
+++ b/Client Web/webMshipper/pages/tableThongBao.html
@@ -2,7 +2,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Danh sách đơn hàng</h1>
+                <h1 class="page-header">Thông báo</h1>
             </div>
             <!-- /.col-lg-12 -->
         </div>
@@ -13,6 +13,7 @@
                     <div class="panel-heading">
                         Bảng dữ liệu
                     </div>
+
                     <div class="row">
                         <div class="col-sm-2">
                             <div>
@@ -28,27 +29,10 @@
                                        data-date-format="dd/mm/yyyy">
                             </div>
                         </div>
-
-                        <div class="col-sm-2">
-                            <label class="control-label col-sm-12"><strong>Trạng thái:</strong></label>
-                            <div bs-dropdown
-                                 bs-dropdown-display="MyDropDown"
-                                 bs-dropdown-items="status"
-                                 ng-model="selectStatus">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2">
-                            <label class="control-label col-sm-12"><strong>Khu vực:</strong></label>
-                            <div bs-dropdown
-                                 bs-dropdown-display="MyDropDown"
-                                 bs-dropdown-items="area"
-                                 ng-model="selectArea">
-                            </div>
-                        </div>
-
                     </div>
+
                     <br>
+
                     <!-- /.panel-heading -->
                     <div class="panel-body">
                         <table width="100%" class="table table-striped table-bordered table-hover"
@@ -56,29 +40,17 @@
                             <thead>
                             <tr>
                                 <th>Id</th>
-                                <th>Created day</th>
-                                <th>Expected day</th>
-                                <th>Adress</th>
-                                <th>Area id</th>
-                                <th>Location maps</th>
-                                <th>Oder status</th>
-                                <th>Payment status</th>
-                                <th>Note</th>
-                                <th>Detail</th>
+                                <th>Date</th>
+                                <th>Destination</th>
+                                <th>Content</th>
                             </tr>
                             </thead>
                             <tbody>
-                            <tr class="pointer" ng-repeat="x in orders">
-                                <td>x._id</td>
-                                <td>x._created_date</td>
-                                <td>x._expected_date</td>
-                                <td>x._address</td>
-                                <td>x._area_id</td>
-                                <td>10.9999</td>
-                                <td>x._order_status</td>
-                                <td>x._payment_status</td>
-                                <td>x._note</td>
-                                <td>detail</td>
+                            <tr class="odd gradeX">
+                                <td>a</td>
+                                <td>a</td>
+                                <td>a</td>
+                                <td>a</td>
                             </tr>
                             </tbody>
                         </table>
