--- a/Client Web/webMshipper/pages/index.html
+++ b/Client Web/webMshipper/pages/index.html
@@ -56,11 +56,13 @@
     <script src="../dist/js/ng-map.min.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/mapquanly.js"></script>
-    <script src="../js/dsdonhang.js"></script>
-    <script src="../js/dsdonhang_add.js"></script>
+    <script src="../js/orders.show.js"></script>
+    <script src="../js/orders.create.js"></script>
     <script src="../js/taikhoan.js"></script>
     <script src="../js/thongbao.js"></script>
     <script src="../js/bieudo.js"></script>
+
+    <script src="../js/orders.modal.showmap.js"></script>
 
     <!-- Morris Charts JavaScript -->
     <script src="../vendor/raphael/raphael.min.js"></script>
