--- a/Client Web/webMshipper/pages/index.html
+++ b/Client Web/webMshipper/pages/index.html
@@ -17,26 +17,34 @@
 
     <link href="../vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 
+    <!-- MetisMenu CSS -->
     <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
 
+    <!-- Custom CSS -->
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
 
+    <!-- Morris Charts CSS -->
     <link href="../vendor/morrisjs/morris.css" rel="stylesheet">
 
+    <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
     <link href="../dist/css/styles.css" rel="stylesheet">
 
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
     <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <script type="text/javascript" src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-cookies.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDbOcgovjIcORWoiZJs2mLGpjvgYKBHjZY"></script>
+
+
     <script src="../js/vendor.js"></script>
 
     <script src="../vendor/datatables/js/jquery.dataTables.min.js"></script>
@@ -44,8 +52,6 @@
     <script src="../vendor/datatables-responsive/dataTables.responsive.js"></script>
 
     <script src="../bower_components/angular-csv-import/angular-csv-import.js"></script>
-
-    <script src="../dist/js/ng-map.min.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/mapquanly.js"></script>
     <script src="../js/orders.show.js"></script>
@@ -64,17 +70,21 @@
 
     <script src="../bower_components/dropdown/bsDropdown.js"></script>
 
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
-    <script src="../dist/js/sb-admin-2.js"></script>
-    <link rel="stylesheet" href="../bower_components/ng-dialog/css/ngDialog.min.css">
-    <link rel="stylesheet" href="../bower_components/ng-dialog/css/ngDialog-theme-default.min.css">
-    <script src="../bower_components/ng-dialog/js/ngDialog.min.js"></script>
-    <script src="../js/User/login.js"></script>
+    <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places&key=AIzaSyCbMGRUwcqKjlYX4h4-P6t-xcDryRYLmCM"></script>
+    <script src="../dist/js/ng-map.js"></script>
+
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    <script src="../dist/js/angularjs-dropdown-multiselect.min.js"></script>
+
 </head>
 
 <body ng-app="mShipperApp">
 
 <div id="wrapper">
+
+    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -85,6 +95,7 @@
             </button>
             <a class="navbar-brand" href="#dashboard">Mshipper v0.1</a>
         </div>
+        <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
             <li class="dropdown">
@@ -135,7 +146,9 @@
                         </a>
                     </li>
                 </ul>
+                <!-- /.dropdown-messages -->
             </li>
+            <!-- /.dropdown -->
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <i class="fa fa-tasks fa-fw"></i> <i class="fa fa-caret-down"></i>
@@ -216,7 +229,9 @@
                         </a>
                     </li>
                 </ul>
+                <!-- /.dropdown-tasks -->
             </li>
+            <!-- /.dropdown -->
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
@@ -274,7 +289,9 @@
                         </a>
                     </li>
                 </ul>
+                <!-- /.dropdown-alerts -->
             </li>
+            <!-- /.dropdown -->
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
@@ -288,8 +305,11 @@
                     <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                     </li>
                 </ul>
+                <!-- /.dropdown-user -->
             </li>
+            <!-- /.dropdown -->
         </ul>
+        <!-- /.navbar-top-links -->
 
         <div class="navbar-default sidebar" role="navigation">
             <div class="sidebar-nav navbar-collapse">
@@ -360,17 +380,22 @@
                                 <a href="#grid">Grid</a>
                             </li>
                         </ul>
+                        <!-- /.nav-second-level -->
                     </li>
                     <li>
-                        <a href="#login"><i class="fa fa-files-o fa-fw"></i>Logout</a>
+                        <a href="#login"><i class="fa fa-files-o fa-fw"></i>Login Page</a>
                     </li>
                 </ul>
             </div>
+            <!-- /.sidebar-collapse -->
         </div>
+        <!-- /.navbar-static-side -->
     </nav>
-    <!--<div class="container">-->
-        <div ng-view></div>
-    <!--</div>-->
+
+    <div ng-view></div>
+
 </div>
+
 </body>
+
 </html>
