--- a/Client Web/webMshipper/pages/Orders/Show.html
+++ b/Client Web/webMshipper/pages/Orders/Show.html
@@ -101,6 +101,18 @@
                             </tbody>
                         </table>
                     </div>
+                    <table class="table table-bordered table-hover table-striped" at-table at-paginated at-list="list" at-config="config">
+                        <thead></thead>
+                        <tbody>
+                        <tr>
+                            <td at-implicit at-sortable at-attribute="index" width="150" at-initial-sorting="asc"></td>
+                            <td at-implicit at-sortable at-attribute="name"  width="250"></td>
+                            <td at-implicit at-sortable at-attribute="email"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                    <at-pagination at-list="list" at-config="config"></at-pagination>
                     <!-- /.panel-body -->
                 </div>
                 <!-- /.panel -->
