--- a/Client Web/webMshipper/pages/index.html
+++ b/Client Web/webMshipper/pages/index.html
@@ -75,6 +75,8 @@
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="http://samu.github.io/angular-table/js/angular-table.min.js"></script>
+    <script src="http://samu.github.io/angular-table/js/angular-tabs.min.js"></script>
 
     <script src="../dist/js/angularjs-dropdown-multiselect.min.js"></script>
 
