--- a/Client Web/webMshipper/pages/Orders/Create.html
+++ b/Client Web/webMshipper/pages/Orders/Create.html
@@ -14,71 +14,78 @@
                         Bảng dữ liệu
                     </div>
 
-                    <div class="row">
+                    <ng-map center="{{ center }}" zoom="10" scrollwheel="false" zoom-to-include-markers="auto">
+                        <marker zoom="10" ng-repeat="p in markers"
+                                position="{{p.pos}}" title="pos: {{p.pos}}"></marker>
+                    </ng-map>
 
-                        <div class="col-sm-6">
-                            <div class="block row">
-                                <div class="block right">
-                                    <ng-csv-import
-                                            class="import"
-                                            content="csv.content"
-                                            header="csv.header"
-                                            header-visible="csv.headerVisible"
-                                            separator="csv.separator"
-                                            separator-visible="csv.separatorVisible"
-                                            result="csv.result"
-                                            encoding="csv.encoding"
-                                            encoding-visible="csv.encodingVisible"
-                                            upload-button-label="csv.uploadButtonLabel"></ng-csv-import>
+                    <br>
+
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="col-sm-2">
+                                <input id="fileButton" type="file" ng-click="uploadFile()" xlsx-model="excel" style="display: none;">
+                                <button type="button" class="btn btn-primary" onclick="document.getElementById('fileButton').click();">Nhập tập tin excel...</button>
+                                <div  ng-if="excel" ng-init="GetImport()"></div>
+                            </div>
+
+                            <div class="col-sm-3">
+                                <button type="button" class="btn btn-primary" ng-click="saveOrders()">Lưu danh sách đơn hàng...</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <br>
+
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="col-sm-2">
+                                <div>
+                                    <label class="control-label col-sm-12"><strong>Ngày bắt đầu:</strong></label>
+                                    <div class="input-group">
+                                        <input readonly id="beginDate" type="text" class="form-control datepicker"
+                                               data-date-format="dd/mm/yyyy" placeholder="dd/mm/yyyy">
+                                        <span class="input-group-addon" id="basic-addon0"><i class="fa fa-calendar"
+                                                                                             aria-hidden="true"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-2">
+                                <div>
+                                    <label class="control-label col-sm-12"><strong>Ngày kết thúc:</strong></label>
+                                    <div class="input-group">
+                                        <input readonly id="endDate" type="text" class="form-control datepicker"
+                                               data-date-format="dd/mm/yyyy" placeholder="dd/mm/yyyy">
+                                        <span class="input-group-addon" id="basic-addon1"><i class="fa fa-calendar"
+                                                                                             aria-hidden="true"></i></span>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div  ng-if="csv.result" ng-init="GetImport()">
+                            <div class="col-sm-2 text-center">
+                                <label class="control-label col-sm-12"><strong>Trạng thái:</strong></label>
+                                <div bs-dropdown
+                                     bs-dropdown-display="MyDropDown"
+                                     bs-dropdown-items="status"
+                                     ng-model="selectStatus"
+                                     ng-change="changeStatus()">
+                                </div>
                             </div>
+
+                            <div class="col-sm-2 text-center">
+                                <label class="control-label col-sm-12"><strong>Khu vực</strong></label>
+                                <div ng-dropdown-multiselect="" options="example6data" selected-model="example6model"
+                                     extra-settings="example6settings" events = "myEventListeners"></div>
+                            </div>
+
+
                         </div>
                     </div>
-
                     <br>
 
-                    <div class="row">
-                        <div class="col-sm-2">
-                            <div>
-                                <label class="control-label col-sm-12"><strong>Ngày bắt đầu:</strong></label>
-                                <input id="beginDate" type="text" class="form-control datepicker"
-                                       data-date-format="dd/mm/yyyy">
-                            </div>
-                        </div>
-                        <div class="col-sm-2">
-                            <div>
-                                <label class="control-label col-sm-12"><strong>Ngày kết thúc:</strong></label>
-                                <input id="beginDate1" type="text" class="form-control datepicker"
-                                       data-date-format="dd/mm/yyyy">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2">
-                            <label class="control-label col-sm-12"><strong>Trạng thái:</strong></label>
-                            <div bs-dropdown
-                                 bs-dropdown-display="MyDropDown"
-                                 bs-dropdown-items="status"
-                                 ng-model="selectStatus">
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2">
-                            <label class="control-label col-sm-12"><strong>Khu vực:</strong></label>
-                            <div bs-dropdown
-                                 bs-dropdown-display="MyDropDown"
-                                 bs-dropdown-items="area"
-                                 ng-model="selectArea">
-                            </div>
-                        </div>
-                    </div>
-
-                    <br>
                     <!-- /.panel-heading -->
                     <div class="panel-body">
-                        <table  width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <table width="100%" class="table table-bordered table-hover">
                             <thead>
                             <tr>
                                 <th>Id</th>
@@ -86,7 +93,6 @@
                                 <th>Expected day</th>
                                 <th>Adress</th>
                                 <th>Area id</th>
-                                <th>Location maps</th>
                                 <th>Oder status</th>
                                 <th>Payment status</th>
                                 <th>Note</th>
@@ -94,22 +100,23 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr data-ng-repeat="x in DonHangs " ng-click="clickRow(x)">
-                                <td>{{x.Id}}</td>
-                                <td>{{x.CreatedDay}}</td>
-                                <td>{{x.ExpectedDay}}</td>
-                                <td>{{x.Adress}}</td>
-                                <td>{{x.AreaId}}</td>
-                                <td>{{x.LocaionMaps}}</td>
-                                <td>{{x.OrderStatus}}</td>
-                                <td>{{x.PaymentStatus}}</td>
-                                <td>{{x.Note}}</td>
-                                <td>{{x.Detail}}</td>
+                            <tr class="pointer" ng-repeat="x in orders">
+                                <td>{{x._id}}</td>
+                                <td>{{x._created_date}}</td>
+                                <td>{{x._expected_date}}</td>
+                                <td>{{x._address}}</td>
+                                <td>{{x._area_id}}</td>
+                                <td>{{x._order_status}}</td>
+                                <td>{{x._payment_status}}</td>
+                                <td>{{x._note}}</td>
+                                <td align="center">
+                                    <button ng-click="loadMaps(x)" type="button" class="btn btn-info btn-circle"><i
+                                            class="fa fa-plus-circle"></i></button>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
                     </div>
-                    <!-- /.panel-body -->
                 </div>
                 <!-- /.panel -->
             </div>
